--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <a href="info@devstudio.com">info@devstudio.com</a>
   <a href="tel:+110001111111">+11 (000) 111-11-11</a>
 </header>
-    <h1>Effective Solutions for Your Business</h1>
+<main>   
+<h1>Effective Solutions for Your Business</h1>
     <button>Order Service</button>
 
     <section>
@@ -53,15 +54,13 @@
       </ul>
 </section>
 
-
-
-</body>
-
-
+</main> 
 
 <footer>
 
   <h1><span>Web</span>Studio</h1>
 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
+
+</body>
 </html>
