--- a/index.html
+++ b/index.html
@@ -9,23 +9,29 @@
 </head>
 <body>
   <header>
+    <nav>
     <h1><span>Web</span>Studio</h1>
   <ul>
     <li><a href="">Studio</a></li>
     <li><a href="">Portfolio</a></li>
     <li><a href="">Contacts</a></li>
   </ul>
+  <address>
   <a href="info@devstudio.com">info@devstudio.com</a>
   <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+</address>
+
+
 </header>
+</nav>
 <main>   
-<h1>Effective Solutions for Your Business</h1>
+<a href="">Effective Solutions for Your Business</a>
     <button>Order Service</button>
 
     <section>
       <ul>
         <li>
-          <h3>Strategy</h3>
+          <h1>Strategy</h1>
           <p>Our goal is to identify the business
             problem to walk away with the perfect and creative solution. </p>
         </li>
