--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
 </head>
 <body>
   <header>
-    
+    <nav>
     <h1><span>Web</span>Studio</h1>
   <ul>
     <li><a href="">Studio</a></li>
     <li><a href="">Portfolio</a></li>
     <li><a href="">Contacts</a></li>
   </ul>
-  <nav>
+</nav>
   <address>
   <a href="info@devstudio.com">info@devstudio.com</a>
   <a href="tel:+110001111111">+11 (000) 111-11-11</a>
 </address>
-</nav>
+
 </header>
 
-<main>   
+<main> 
+  <section>  
 <a href="">Effective Solutions for Your Business</a>
     <button>Order Service</button>
+  </section>
 
     <section>
       <ul>
