--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
+    <a href=""><span>Web</span>Studio</a>
+
 </head>
 <body>
   <header>
     <nav>
-    <h1><span>Web</span>Studio</h1>
   <ul>
     <li><a href="">Studio</a></li>
     <li><a href="">Portfolio</a></li>
@@ -31,6 +32,7 @@
   </section>
 
     <section>
+
       <ul>
         <li>
           <h3>Strategy</h3>
