--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
-    <a href=""><span>Web</span>Studio</a>
+    
 
 </head>
 <body>
   <header>
     <nav>
+    <a href="./index.html"><span>Web</span>Studio</a>
   <ul>
     <li><a href="">Studio</a></li>
     <li><a href="">Portfolio</a></li>
