--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <footer>
 
-  <h1><span>Web</span>Studio</h1>
+  <a href="./index.html"><span>Web</span>Studio</a>
 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 
