--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </section>
 
     <section>
-
+      <h2></h2>
       <ul>
         <li>
           <h3>Strategy</h3>
@@ -69,7 +69,7 @@
 
 <footer>
 
-  <a href="./index.html"><span>Web</span>Studio</a>
+  <a href="./index.html">WebStudio</a>
 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 
