--- a/index.html
+++ b/index.html
@@ -57,19 +57,35 @@
 
     <section>
       <h2>Our Team</h2>
-      <ul>
-        <li><img src="./images/Team-card1.png" alt=""></li>
-        <li><img src="./images/Team-card2.png" alt=""></li>
-        <li><img src="./images/Team-card3.png" alt=""></li>
-        <li><img src="./images/Team-card4.png" alt=""></li>
-      </ul>
+<ul>
+  <li>
+    <img src="./images/img.png" alt="">
+    <h2>Mark Guerrero</h2>
+    <p>Product Designer</p>
+  </li>
+  <li>
+    <img src="./images/img2.png" alt="">
+    <h2>Tom Ford</h2>
+    <p>Frontend Developer</p>
+  </li>
+  <li>
+    <img src="./images/img3.png" alt="">
+    <h2>Camila Garcia</h2>
+    <p>Marketing</p>
+  </li>
+  <li>
+    <img src="./images/img4.png" alt="">
+    <h2>Daniel Wilson</h2>
+    <p>UI Designer</p>
+  </li>
+</ul>
 </section>
 
 </main> 
 
 <footer>
-
-  <a href="./index.html">WebStudio</a>
+ <a href="./index.html">WebStudio</a>
+ 
 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 
