--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <main> 
   <section>  
-<a href="">Effective Solutions for Your Business</a>
+<h1>Effective Solutions for Your Business</h1>
     <button>Order Service</button>
   </section>
 
