--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
       <h2>Our Team</h2>
 <ul>
   <li>
-    <img src="./images/img.png" alt="">
+    <img src="./images/img.jpg" alt="">
     <h2>Mark Guerrero</h2>
     <p>Product Designer</p>
   </li>
   <li>
-    <img src="./images/img2.png" alt="">
+    <img src="./images/img1.jpg" alt="">
     <h2>Tom Ford</h2>
     <p>Frontend Developer</p>
   </li>
   <li>
-    <img src="./images/img3.png" alt="">
+    <img src="./images/img2.jpg" alt="">
     <h2>Camila Garcia</h2>
     <p>Marketing</p>
   </li>
   <li>
-    <img src="./images/img4.png" alt="">
+    <img src="./images/img3.jpg" alt="">
     <h2>Daniel Wilson</h2>
     <p>UI Designer</p>
   </li>
