--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
       <h2>Our Team</h2>
 <ul>
   <li>
-    <img src="./images/img.jpg" alt="">
+    <img src="./images/img.jpg" alt="1">
     <h2>Mark Guerrero</h2>
     <p>Product Designer</p>
   </li>
   <li>
-    <img src="./images/img1.jpg" alt="">
+    <img src="./images/img1.jpg" alt="2">
     <h2>Tom Ford</h2>
     <p>Frontend Developer</p>
   </li>
   <li>
-    <img src="./images/img2.jpg" alt="">
+    <img src="./images/img2.jpg" alt="3">
     <h2>Camila Garcia</h2>
     <p>Marketing</p>
   </li>
   <li>
-    <img src="./images/img3.jpg" alt="">
+    <img src="./images/img3.jpg" alt="4">
     <h2>Daniel Wilson</h2>
     <p>UI Designer</p>
   </li>
