--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h2>Our Team</h2>
 <ul>
   <li>
-    <img src="./images/img.jpg" alt="1">
+    <img src="./images/img.jpg" alt="1" width="264">
     <h2>Mark Guerrero</h2>
     <p>Product Designer</p>
   </li>
