--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
     <p>Product Designer</p>
   </li>
   <li>
-    <img src="./images/img1.jpg" alt="2">
+    <img src="./images/img1.jpg" alt="2" width="264">
     <h2>Tom Ford</h2>
     <p>Frontend Developer</p>
   </li>
   <li>
-    <img src="./images/img2.jpg" alt="3">
+    <img src="./images/img2.jpg" alt="3" width="264">
     <h2>Camila Garcia</h2>
     <p>Marketing</p>
   </li>
   <li>
-    <img src="./images/img3.jpg" alt="4">
+    <img src="./images/img3.jpg" alt="4" width="264">
     <h2>Daniel Wilson</h2>
     <p>UI Designer</p>
   </li>
