--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-  <h1>Masdoi</h1>
+  <h1 style="malto">Masdoi</h1>
   <header>
     <nav>
     <a href="./index.html">WebStudio</a>
